@@ -6,7 +6,7 @@
        url         = "http://www.monodevelop.com/"
        description = "Visual Designer for ASP.NET Web Forms."
        category    = "Web Development"
-       version     = "2.2">
+       version     = "2.4">
 	
 	<Runtime>
 		<Import assembly = "AspNetEdit.dll"/>
@@ -14,11 +14,11 @@
 	</Runtime>
 
 	<Dependencies>
-		<Addin id="Core" version="2.2"/>
-		<Addin id="Ide" version="2.2"/>
-		<Addin id="Deployment" version="2.2" />
-		<Addin id="AspNet" version="2.2" />
-		<Addin id="DesignerSupport" version="2.2" />
+		<Addin id="Core" version="2.4"/>
+		<Addin id="Ide" version="2.4"/>
+		<Addin id="Deployment" version="2.4" />
+		<Addin id="AspNet" version="2.4" />
+		<Addin id="DesignerSupport" version="2.4" />
 	</Dependencies>
 	
 	<Extension path = "/MonoDevelop/Ide/DisplayBindings">
