@@ -1,3 +1,9 @@
+2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* configure:
+	* AssemblyInfo.cs:
+	* AspNetEdit.addin.xml: Bumped MD version.
+
 2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* AspNetEdit.csproj: Flush.
